<resources>
    <string name="app_name">MyBook</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">about_page</string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="rating">Rating</string>
    <string name="sell">Sell</string>
    <string name="pages">Pages</string>
    <string name="currency">Rp. %s</string>
    <string name="release">Released on %s</string>
    <string name="synopsis">Synopsis</string>
    <string name="buy">Buy Now</string>
    <string name="welcome_word">Hello, User</string>
    <string name="no_data">No Data</string>
    <string name="no_data_cart">No Data Cart</string>
    <string name="profile">Profile</string>
    <string name="avatar">Avatar</string>
    <string name="name">Dandy Candra Oktaviano</string>
    <string name="username">a139dsx1398@bangkit.academy</string>
    <string name="level">Level 1</string>
    <string name="level_category">Level 1</string>
    <string name="level_score">75 / 100</string>
    <string name="favorite">Favorite Books</string>
    <string name="see_all">See All</string>
    <string name="favorite_book">Favorite Book 1</string>
    <string name="info">Info</string>
    <string name="time_reading">Time Reading</string>
    <string name="time_reading_value">16h 37min</string>
    <string name="total_books">Total Books</string>
    <string name="total_books_value">21</string>
    <string name="total_price">Total Price</string>
    <string name="check_out">Buy</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="share_message">Hey, I have bought %1$d books in MyBook with total %2$d . Do you want too?</string>
    <string name="mybook_price">MyBook Price</string>
    <string name="back">Back</string>
</resources>