...
            )
            H3Text(
                description = title,
                color = darkBlue,
                modifier = Modifier
                    .align(Alignment.Center)
                    .testTag("bookTitle"),
            )
        }

        Subtitle2Text(
            modifier = Modifier.fillMaxWidth(),
            textAlign = TextAlign.Center,
...
