...
        }

        if (data.isEmpty()) {
            NoData(title = stringResource(R.string.no_data))
        } else {
            LazyColumn(
                modifier = modifier.testTag("BookList"),
            ) {
                items(data, key = { it.book.id }) { data ->
                    BookItem(
                        image = data.book.image,
                        title = data.book.title,
                        author = data.book.author,
...
