...

            ModalBottomSheetDesign(
                modifier = Modifier.padding(40.dp),
                orderId = data.book.id,
                title = data.book.title,
                author = data.book.author,
                count = orderCount,
                price = totalPoint,
                onProductIncreased = {
                    orderCount++
                },
                onProductDecreased = {
                    orderCount--
...

        MainButton(
            text = stringResource(R.string.buy),
            modifier = Modifier
                .align(Alignment.BottomCenter)
                .semantics(mergeDescendants = true) {
                    contentDescription = "Modal Button"
                },
            onClick = navigateToCart

        )
    }

...
